[gd_scene load_steps=17 format=3 uid="uid://p2ui6ga7ogdp"]

[ext_resource type="PackedScene" uid="uid://k14sen5i6v7r" path="res://characters/character.tscn" id="1_fg4et"]
[ext_resource type="Script" path="res://characters/player.gd" id="2_rwx37"]
[ext_resource type="Shader" path="res://characters/player.gdshader" id="3_351ya"]
[ext_resource type="AudioStream" uid="uid://c3mqu2y44n78u" path="res://SFX/derrota.wav" id="4_m31mm"]
[ext_resource type="AudioStream" uid="uid://cuij27hyadn78" path="res://SFX/dano.wav" id="5_245ar"]
[ext_resource type="AudioStream" uid="uid://7kro00tkyvk6" path="res://SFX/eat.wav" id="6_o5ml4"]
[ext_resource type="AudioStream" uid="uid://0nd7m6k0pn5p" path="res://SFX/grow.wav" id="7_dxug1"]
[ext_resource type="AudioStream" uid="uid://otu06lqwks4v" path="res://SFX/shrink.wav" id="8_f8m1d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f7nwh"]
shader = ExtResource("3_351ya")
shader_parameter/active = false
shader_parameter/modul = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rkgws"]
radius = 16.0
height = 96.0

[sub_resource type="Animation" id="Animation_ptotc"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("collision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"player_dead"],
"method": &"emit_signal"
}]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("lose_sound")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.1,
"stream": ExtResource("4_m31mm")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_dk6q2"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("collision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_argyt"]
_data = {
"dead": SubResource("Animation_ptotc"),
"idle": SubResource("Animation_dk6q2")
}

[sub_resource type="Animation" id="Animation_fa5wm"]
resource_name = "blink_off"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_nqu72"]
resource_name = "blink_on"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:vulnerable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fsok5"]
_data = {
"blink_off": SubResource("Animation_fa5wm"),
"blink_on": SubResource("Animation_nqu72")
}

[node name="player" instance=ExtResource("1_fg4et")]
collision_mask = 16
script = ExtResource("2_rwx37")
vulnerable = false

[node name="sprites" parent="." index="0"]
material = SubResource("ShaderMaterial_f7nwh")
animation = &"pez2"

[node name="collision" parent="." index="1"]
position = Vector2(16, 0)
shape = SubResource("CapsuleShape2D_rkgws")

[node name="animations" parent="." index="2"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_argyt")
}

[node name="blinker" parent="." index="3"]
autoplay = "blink_off"
libraries = {
"": SubResource("AnimationLibrary_fsok5")
}

[node name="damage_sound" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource("5_245ar")
volume_db = -12.0

[node name="eat_sound" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource("6_o5ml4")
volume_db = -12.0

[node name="grow_sound" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource("7_dxug1")
volume_db = -12.0

[node name="shrink_sound" type="AudioStreamPlayer" parent="." index="7"]
stream = ExtResource("8_f8m1d")
volume_db = -12.0
pitch_scale = 0.5

[node name="lose_sound" type="AudioStreamPlayer" parent="." index="8"]
volume_db = -12.0
